--- a/templates/admin/interview_analyzer/index.html
+++ b/templates/admin/interview_analyzer/index.html
@@ -93,7 +93,7 @@
               reload_candidate_list()
 
             setInterval(function (){
-                reload_candidate_list()
+                //reload_candidate_list()
             },4000)
 
               function upload_video(){
