--- a/templates/admin/interview_analyzer/report.html
+++ b/templates/admin/interview_analyzer/report.html
@@ -86,7 +86,7 @@
 
     <div class="row">
       <div class="col-6 col-md-6">
-        <h2 class="text-dark">Interviewer's Rating</h2>
+        <h2 class="text-dark">Interviewer's Video Emotions </h2>
         <div class="data">
           <div class="d-flex align-items-center justify-content-between mb-3">
             <h6 class="pr-2 mb-0 font-weight-bold text-dark">Happiness:</h6>
@@ -95,12 +95,12 @@
               <div
                 class="progress-bar"
                 role="progressbar"
-                style="width: 90%"
-                aria-valuenow="90"
+                style="width: {{ interviewer_video_report['happy']*100 }}%"
+                aria-valuenow="{{ interviewer_video_report['happy']*100 }}"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
-                90%
+              {{ interviewer_video_report['happy']*100 }}%
               </div>
             </div>
           </div>
@@ -111,12 +111,12 @@
               <div
                 class="progress-bar"
                 role="progressbar"
-                style="width: 60%"
-                aria-valuenow="60"
+                style="width: {{ interviewer_video_report['angry']*100 }}%"
+                aria-valuenow="{{ interviewer_video_report['angry']*100 }}"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
-                60%
+              {{ interviewer_video_report['angry']*100 }}%
               </div>
             </div>
           </div>
@@ -127,12 +127,12 @@
               <div
                 class="progress-bar"
                 role="progressbar"
-                style="width: 20%"
-                aria-valuenow="20"
+                style="width: {{ interviewer_video_report['sad']*100 }}%"
+                aria-valuenow="{{ interviewer_video_report['sad']*100 }}"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
-                20%
+              {{ interviewer_video_report['sad']*100 }}%
               </div>
             </div>
           </div>
@@ -143,19 +143,67 @@
               <div
                 class="progress-bar"
                 role="progressbar"
-                style="width: 10%"
-                aria-valuenow="10"
+                style="width: {{ interviewer_video_report['fear']*100 }}%"
+                aria-valuenow="{{ interviewer_video_report['fear']*100 }}"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
-                10%
+              {{ interviewer_video_report['fear']*100 }}%
+              </div>
+            </div>
+          </div>
+          <div class="d-flex align-items-center justify-content-between mb-3">
+            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Disgust:</h6>
+            <div class="progress flex-fill">
+              &nbsp;
+              <div
+                class="progress-bar"
+                role="progressbar"
+                style="width: {{ interviewer_video_report['disgust']*100 }}%"
+                aria-valuenow="{{ interviewer_video_report['disgust']*100 }}"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              >
+              {{ interviewer_video_report['disgust']*100 }}%
+              </div>
+            </div>
+          </div>
+          <div class="d-flex align-items-center justify-content-between mb-3">
+            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Surprise:</h6>
+            <div class="progress flex-fill">
+              &nbsp;
+              <div
+                class="progress-bar"
+                role="progressbar"
+                style="width: {{ interviewer_video_report['surprise']*100 }}%"
+                aria-valuenow="{{ interviewer_video_report['surprise']*100 }}"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              >
+              {{ interviewer_video_report['surprise']*100 }}%
+              </div>
+            </div>
+          </div>
+          <div class="d-flex align-items-center justify-content-between mb-3">
+            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Neutral:</h6>
+            <div class="progress flex-fill">
+              &nbsp;
+              <div
+                class="progress-bar"
+                role="progressbar"
+                style="width: {{ interviewer_video_report['neutral']*100 }}%"
+                aria-valuenow="{{ interviewer_video_report['neutral']*100 }}"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              >
+              {{ interviewer_video_report['neutral']*100 }}%
               </div>
             </div>
           </div>
         </div>
       </div>
       <div class="col-6 col-md-6">
-        <h2 class="text-dark">Candidate's Rating(Demo)</h2>
+        <h2 class="text-dark">Interviewer's Text Sentiments</h2>
         <div class="data">
           <div class="d-flex align-items-center justify-content-between mb-3">
             <h6 class="pr-2 mb-0 font-weight-bold text-dark">Happiness:</h6>
@@ -164,12 +212,12 @@
               <div
                 class="progress-bar"
                 role="progressbar"
-                style="width: 50%"
-                aria-valuenow="90"
+                style="width: {{ interviewer_video_report['happy']*100 }}%"
+                aria-valuenow="{{ interviewer_video_report['happy']*100 }}"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
-                50%
+              {{ interviewer_video_report['happy']*100 }}%
               </div>
             </div>
           </div>
@@ -180,12 +228,12 @@
               <div
                 class="progress-bar"
                 role="progressbar"
-                style="width: 20%"
-                aria-valuenow="20"
+                style="width: {{ interviewer_video_report['angry']*100 }}%"
+                aria-valuenow="{{ interviewer_video_report['angry']*100 }}"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
-                20%
+              {{ interviewer_video_report['angry']*100 }}
               </div>
             </div>
           </div>
@@ -196,12 +244,12 @@
               <div
                 class="progress-bar"
                 role="progressbar"
-                style="width: 40%"
-                aria-valuenow="40"
+                style="width: {{ interviewer_video_report['sad']*100 }}%"
+                aria-valuenow="{{ interviewer_video_report['sad']*100 }}"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
-                40%
+              {{ interviewer_video_report['sad']*100 }}
               </div>
             </div>
           </div>
@@ -212,12 +260,63 @@
               <div
                 class="progress-bar"
                 role="progressbar"
-                style="width: 60%"
-                aria-valuenow="60"
+                style="width: {{ interviewer_video_report['fear']*100 }}%"
+                aria-valuenow="{{ interviewer_video_report['fear']*100 }}"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
-                60%
+              {{ interviewer_video_report['fear']*100 }}
+              </div>
+            </div>
+          </div>
+
+          <div class="d-flex align-items-center justify-content-between mb-3">
+            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Disgust:</h6>
+            <div class="progress flex-fill">
+              &nbsp;
+              <div
+                class="progress-bar"
+                role="progressbar"
+                style="width: {{ interviewer_video_report['disgust']*100 }}%"
+                aria-valuenow="{{ interviewer_video_report['disgust']*100 }}"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              >
+              {{ interviewer_video_report['disgust']*100 }}
+              </div>
+            </div>
+          </div>
+
+          <div class="d-flex align-items-center justify-content-between mb-3">
+            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Surprise:</h6>
+            <div class="progress flex-fill">
+              &nbsp;
+              <div
+                class="progress-bar"
+                role="progressbar"
+                style="width: {{ interviewer_video_report['surprise']*100 }}%"
+                aria-valuenow="{{ interviewer_video_report['surprise']*100 }}"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              >
+              {{ interviewer_video_report['surprise']*100 }}
+              </div>
+            </div>
+          </div>
+
+          <div class="d-flex align-items-center justify-content-between mb-3">
+            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Neutral:</h6>
+            <div class="progress flex-fill">
+              &nbsp;
+              <div
+                class="progress-bar"
+                role="progressbar"
+                style="width: {{ interviewer_video_report['neutral']*100 }}%"
+                aria-valuenow="{{ interviewer_video_report['neutral']*100 }}"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              >
+              {{ interviewer_video_report['neutral']*100 }}
               </div>
             </div>
           </div>
