--- a/templates/admin/interview_analyzer/report.html
+++ b/templates/admin/interview_analyzer/report.html
@@ -212,12 +212,12 @@
               <div
                 class="progress-bar"
                 role="progressbar"
-                style="width: {{ interviewer_video_report['happy']*100 }}%"
-                aria-valuenow="{{ interviewer_video_report['happy']*100 }}"
+                style="width: {{ interviewer_text_report['happy']*100 }}%"
+                aria-valuenow="{{ interviewer_text_report['happy']*100 }}"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
-              {{ interviewer_video_report['happy']*100 }}%
+              {{ interviewer_text_report['happy']*100 }}%
               </div>
             </div>
           </div>
@@ -228,12 +228,12 @@
               <div
                 class="progress-bar"
                 role="progressbar"
-                style="width: {{ interviewer_video_report['angry']*100 }}%"
-                aria-valuenow="{{ interviewer_video_report['angry']*100 }}"
+                style="width: {{ interviewer_text_report['angry']*100 }}%"
+                aria-valuenow="{{ interviewer_text_report['angry']*100 }}"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
-              {{ interviewer_video_report['angry']*100 }}
+              {{ interviewer_text_report['angry']*100 }}
               </div>
             </div>
           </div>
@@ -244,12 +244,12 @@
               <div
                 class="progress-bar"
                 role="progressbar"
-                style="width: {{ interviewer_video_report['sad']*100 }}%"
-                aria-valuenow="{{ interviewer_video_report['sad']*100 }}"
+                style="width: {{ interviewer_text_report['sad']*100 }}%"
+                aria-valuenow="{{ interviewer_text_report['sad']*100 }}"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
-              {{ interviewer_video_report['sad']*100 }}
+              {{ interviewer_text_report['sad']*100 }}
               </div>
             </div>
           </div>
@@ -260,12 +260,12 @@
               <div
                 class="progress-bar"
                 role="progressbar"
-                style="width: {{ interviewer_video_report['fear']*100 }}%"
-                aria-valuenow="{{ interviewer_video_report['fear']*100 }}"
+                style="width: {{ interviewer_text_report['fear']*100 }}%"
+                aria-valuenow="{{ interviewer_text_report['fear']*100 }}"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
-              {{ interviewer_video_report['fear']*100 }}
+              {{ interviewer_text_report['fear']*100 }}
               </div>
             </div>
           </div>
@@ -277,12 +277,12 @@
               <div
                 class="progress-bar"
                 role="progressbar"
-                style="width: {{ interviewer_video_report['disgust']*100 }}%"
-                aria-valuenow="{{ interviewer_video_report['disgust']*100 }}"
+                style="width: {{ interviewer_text_report['disgust']*100 }}%"
+                aria-valuenow="{{ interviewer_text_report['disgust']*100 }}"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
-              {{ interviewer_video_report['disgust']*100 }}
+              {{ interviewer_text_report['disgust']*100 }}
               </div>
             </div>
           </div>
@@ -294,12 +294,12 @@
               <div
                 class="progress-bar"
                 role="progressbar"
-                style="width: {{ interviewer_video_report['surprise']*100 }}%"
-                aria-valuenow="{{ interviewer_video_report['surprise']*100 }}"
+                style="width: {{ interviewer_text_report['surprise']*100 }}%"
+                aria-valuenow="{{ interviewer_text_report['surprise']*100 }}"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
-              {{ interviewer_video_report['surprise']*100 }}
+              {{ interviewer_text_report['surprise']*100 }}
               </div>
             </div>
           </div>
@@ -311,12 +311,12 @@
               <div
                 class="progress-bar"
                 role="progressbar"
-                style="width: {{ interviewer_video_report['neutral']*100 }}%"
-                aria-valuenow="{{ interviewer_video_report['neutral']*100 }}"
+                style="width: {{ interviewer_text_report['neutral']*100 }}%"
+                aria-valuenow="{{ interviewer_text_report['neutral']*100 }}"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
-              {{ interviewer_video_report['neutral']*100 }}
+              {{ interviewer_text_report['neutral']*100 }}
               </div>
             </div>
           </div>
