--- a/templates/admin/interview_analyzer/report.html
+++ b/templates/admin/interview_analyzer/report.html
@@ -15,7 +15,10 @@
       href="https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <!-- Icons. Uncomment required icon fonts -->
     <link
@@ -28,10 +31,12 @@
       h1 {
         color: #aa142d;
       }
+
       .progress-bar {
         background-color: #aa142d;
         font-weight: bold;
       }
+
       h1,
       .h1,
       h2,
@@ -51,12 +56,14 @@
       .hr-theme-ib {
         display: flex;
       }
+
       .hr-theme-ib .hr-line {
         width: 100%;
         position: relative;
         margin: 15px;
         border-bottom: 1px solid #000;
       }
+
       .hr-theme-ib .hr-icon {
         position: relative;
         top: 3px;
@@ -65,8 +72,15 @@
       .w-33 {
         width: 33%;
       }
+
+      ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+      }
     </style>
   </head>
+
   <body class="bg-white">
     <div
       class="container d-flex justify-content-between align-items-center justify-content-between"
@@ -82,249 +96,75 @@
           <h2 class="text-center text-dark mt-3 mb-5"><u>Overall Rating</u></h2>
         </div>
       </div>
-    </div>
-
-    <div class="row">
-      <div class="col-6 col-md-6">
-        <h2 class="text-dark">Interviewer's Video Emotions </h2>
-        <div class="data">
-          <div class="d-flex align-items-center justify-content-between mb-3">
-            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Happiness:</h6>
-            <div class="progress flex-fill">
-              &nbsp;
-              <div
-                class="progress-bar"
-                role="progressbar"
-                style="width: {{ interviewer_video_report['happy']*100 }}%"
-                aria-valuenow="{{ interviewer_video_report['happy']*100 }}"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              >
-              {{ interviewer_video_report['happy']*100 }}%
-              </div>
-            </div>
+      <div class="col-md-12">
+        <div class="section d-flex align-items-center text-center">
+          <div class="w-50">
+            <h2 class="text-dark mt-3 mb-3">Interviewer's Rating</h2>
+            <ul>
+              <li>
+                <img
+                  class="w-100"
+                  src="{{ base_dir }}/uploads/reports/graphs/_overall_interviewer_video_report_{{overall.candidate_id}}.svg"
+                />
+                <h6 class="font-weight-bold text-dark">Video Analysis</h6>
+              </li>
+              <li>
+                <img
+                  class="w-100"
+                  src="{{ base_dir }}/uploads/reports/graphs/_overall_interviewer_text_report_{{overall.candidate_id}}.svg"
+                />
+                <h6 class="font-weight-bold text-dark">
+                  Text Sentiment Analysis
+                </h6>
+              </li>
+              {% if overall.interviewer_audio_report %}
+              <li>
+                <img
+                  class="w-100"
+                  src="{{ base_dir }}/uploads/reports/graphs/_overall_interviewer_audio_report_{{overall.candidate_id}}.svg"
+                />
+                <h6 class="font-weight-bold text-dark">Audio Analysis</h6>
+              </li>
+              {% endif %}
+            </ul>
           </div>
-          <div class="d-flex align-items-center justify-content-between mb-3">
-            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Angry:</h6>
-            <div class="progress flex-fill">
-              &nbsp;
-              <div
-                class="progress-bar"
-                role="progressbar"
-                style="width: {{ interviewer_video_report['angry']*100 }}%"
-                aria-valuenow="{{ interviewer_video_report['angry']*100 }}"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              >
-              {{ interviewer_video_report['angry']*100 }}%
-              </div>
-            </div>
-          </div>
-          <div class="d-flex align-items-center justify-content-between mb-3">
-            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Sadness:</h6>
-            <div class="progress flex-fill">
-              &nbsp;
-              <div
-                class="progress-bar"
-                role="progressbar"
-                style="width: {{ interviewer_video_report['sad']*100 }}%"
-                aria-valuenow="{{ interviewer_video_report['sad']*100 }}"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              >
-              {{ interviewer_video_report['sad']*100 }}%
-              </div>
-            </div>
-          </div>
-          <div class="d-flex align-items-center justify-content-between mb-3">
-            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Fear:</h6>
-            <div class="progress flex-fill">
-              &nbsp;
-              <div
-                class="progress-bar"
-                role="progressbar"
-                style="width: {{ interviewer_video_report['fear']*100 }}%"
-                aria-valuenow="{{ interviewer_video_report['fear']*100 }}"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              >
-              {{ interviewer_video_report['fear']*100 }}%
-              </div>
-            </div>
-          </div>
-          <div class="d-flex align-items-center justify-content-between mb-3">
-            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Disgust:</h6>
-            <div class="progress flex-fill">
-              &nbsp;
-              <div
-                class="progress-bar"
-                role="progressbar"
-                style="width: {{ interviewer_video_report['disgust']*100 }}%"
-                aria-valuenow="{{ interviewer_video_report['disgust']*100 }}"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              >
-              {{ interviewer_video_report['disgust']*100 }}%
-              </div>
-            </div>
-          </div>
-          <div class="d-flex align-items-center justify-content-between mb-3">
-            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Surprise:</h6>
-            <div class="progress flex-fill">
-              &nbsp;
-              <div
-                class="progress-bar"
-                role="progressbar"
-                style="width: {{ interviewer_video_report['surprise']*100 }}%"
-                aria-valuenow="{{ interviewer_video_report['surprise']*100 }}"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              >
-              {{ interviewer_video_report['surprise']*100 }}%
-              </div>
-            </div>
-          </div>
-          <div class="d-flex align-items-center justify-content-between mb-3">
-            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Neutral:</h6>
-            <div class="progress flex-fill">
-              &nbsp;
-              <div
-                class="progress-bar"
-                role="progressbar"
-                style="width: {{ interviewer_video_report['neutral']*100 }}%"
-                aria-valuenow="{{ interviewer_video_report['neutral']*100 }}"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              >
-              {{ interviewer_video_report['neutral']*100 }}%
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-6 col-md-6">
-        <h2 class="text-dark">Interviewer's Text Sentiments</h2>
-        <div class="data">
-          <div class="d-flex align-items-center justify-content-between mb-3">
-            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Happiness:</h6>
-            <div class="progress flex-fill">
-              &nbsp;
-              <div
-                class="progress-bar"
-                role="progressbar"
-                style="width: {{ interviewer_text_report['happy']*100 }}%"
-                aria-valuenow="{{ interviewer_text_report['happy']*100 }}"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              >
-              {{ interviewer_text_report['happy']*100 }}%
-              </div>
-            </div>
-          </div>
-          <div class="d-flex align-items-center justify-content-between mb-3">
-            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Angry:</h6>
-            <div class="progress flex-fill">
-              &nbsp;
-              <div
-                class="progress-bar"
-                role="progressbar"
-                style="width: {{ interviewer_text_report['angry']*100 }}%"
-                aria-valuenow="{{ interviewer_text_report['angry']*100 }}"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              >
-              {{ interviewer_text_report['angry']*100 }}
-              </div>
-            </div>
-          </div>
-          <div class="d-flex align-items-center justify-content-between mb-3">
-            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Sadness:</h6>
-            <div class="progress flex-fill">
-              &nbsp;
-              <div
-                class="progress-bar"
-                role="progressbar"
-                style="width: {{ interviewer_text_report['sad']*100 }}%"
-                aria-valuenow="{{ interviewer_text_report['sad']*100 }}"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              >
-              {{ interviewer_text_report['sad']*100 }}
-              </div>
-            </div>
-          </div>
-          <div class="d-flex align-items-center justify-content-between mb-3">
-            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Fear:</h6>
-            <div class="progress flex-fill">
-              &nbsp;
-              <div
-                class="progress-bar"
-                role="progressbar"
-                style="width: {{ interviewer_text_report['fear']*100 }}%"
-                aria-valuenow="{{ interviewer_text_report['fear']*100 }}"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              >
-              {{ interviewer_text_report['fear']*100 }}
-              </div>
-            </div>
-          </div>
-
-          <div class="d-flex align-items-center justify-content-between mb-3">
-            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Disgust:</h6>
-            <div class="progress flex-fill">
-              &nbsp;
-              <div
-                class="progress-bar"
-                role="progressbar"
-                style="width: {{ interviewer_text_report['disgust']*100 }}%"
-                aria-valuenow="{{ interviewer_text_report['disgust']*100 }}"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              >
-              {{ interviewer_text_report['disgust']*100 }}
-              </div>
-            </div>
-          </div>
-
-          <div class="d-flex align-items-center justify-content-between mb-3">
-            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Surprise:</h6>
-            <div class="progress flex-fill">
-              &nbsp;
-              <div
-                class="progress-bar"
-                role="progressbar"
-                style="width: {{ interviewer_text_report['surprise']*100 }}%"
-                aria-valuenow="{{ interviewer_text_report['surprise']*100 }}"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              >
-              {{ interviewer_text_report['surprise']*100 }}
-              </div>
-            </div>
-          </div>
-
-          <div class="d-flex align-items-center justify-content-between mb-3">
-            <h6 class="pr-2 mb-0 font-weight-bold text-dark">Neutral:</h6>
-            <div class="progress flex-fill">
-              &nbsp;
-              <div
-                class="progress-bar"
-                role="progressbar"
-                style="width: {{ interviewer_text_report['neutral']*100 }}%"
-                aria-valuenow="{{ interviewer_text_report['neutral']*100 }}"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              >
-              {{ interviewer_text_report['neutral']*100 }}
-              </div>
-            </div>
+          <div class="w-50">
+            <h2 class="text-dark mt-3 mb-3">Candidate's Rating</h2>
+            <ul>
+              <li>
+                <img
+                  class="w-100"
+                  src="{{ base_dir }}/uploads/reports/graphs/_overall_candidate_video_report_{{overall.candidate_id}}.svg"
+                />
+                <h6 class="font-weight-bold text-dark">Video Analysis</h6>
+              </li>
+              <li>
+                <img
+                  class="w-100"
+                  src="{{ base_dir }}/uploads/reports/graphs/_overall_candidate_text_report_{{overall.candidate_id}}.svg"
+                />
+                <h6 class="font-weight-bold text-dark">
+                  Test Sentiment Analysis
+                </h6>
+              </li>
+              {% if overall.candidate_audio_report %}
+              <li>
+                <img
+                  class="w-100"
+                  src="{{ base_dir }}/uploads/reports/graphs/_overall_candidate_audio_report_{{overall.candidate_id}}.svg"
+                />
+                <h6 class="font-weight-bold text-dark">Audio Analysis</h6>
+              </li>
+              {% endif %}
+            </ul>
           </div>
         </div>
       </div>
     </div>
 
     <hr />
+    <div style="page-break-before: always"></div>
+
     <div class="">
       <div class="col-md-12">
         <div class="section">
@@ -333,30 +173,88 @@
           </h2>
         </div>
       </div>
-      {% for video_report, video_process in report_data %}
+
+      {% set list_length = report_data|length %} {% for video_report,
+      video_process in report_data %} {% set index = loop.index %} {% if index <
+      (list_length-1) %} {% set next_video_process=report_data[index][1] %} {%
+      if video_process.end_duration==next_video_process.start_duration and
+      video_process.speaker=='Interviewer' %}
+
       <div class="question-wrapper mt-3">
-        <h3 class="font-weight-bold text-dark"><i class="fa fa-question-circle" aria-hidden="true" style="color:#AA142D"></i>
-          {{ loop.index }}. {{video_process.interview_transcript}}
+        <h3 class="font-weight-bold text-dark">
+          <i
+            class="fa fa-question-circle"
+            aria-hidden="true"
+            style="color: #aa142d"
+          ></i>
+          {{video_process.interview_transcript}}
         </h3>
         <div class="question-graphs d-flex align-items-center text-center">
           <div class="w-50 p-3">
             <img
               class="w-100"
-              src="{{ base_dir }}/uploads/reports/graphs/_text_analysis_chart_{{video_report.video_process_id}}.png"
+              src="{{ base_dir }}/uploads/reports/graphs/_text_analysis_chart_{{video_report.video_process_id}}.svg"
             />
             <h6 class="font-weight-bold text-dark">Text Sentiment Analysis</h6>
           </div>
           <div class="w-50 p-3">
             <img
               class="w-100"
-              src="{{ base_dir }}/uploads/reports/graphs/_frame_analysis_chart_{{video_report.video_process_id}}.png"
+              src="{{ base_dir }}/uploads/reports/graphs/_frame_analysis_chart_{{video_report.video_process_id}}.svg"
             />
             <h6 class="font-weight-bold text-dark">Video Analysis</h6>
           </div>
+
+          {% if video_report.audio_report %}
+          <div class="w-50 p-3">
+            <img
+              class="w-100"
+              src="{{ base_dir }}/uploads/reports/graphs/_audio_analysis_chart_{{video_report.video_process_id}}.svg"
+            />
+            <h6 class="font-weight-bold text-dark">Audio Analysis</h6>
+          </div>
+          {% endif %}
         </div>
       </div>
+
+      {% elif video_process.end_duration == next_video_process.start_duration
+      and video_process.speaker == 'candidate' and video_process.start_duration
+      != '0' %}
+
       <div class="question-wrapper mt-3">
-        <h3 class="font-weight-bold text-dark"><i class="fa fa-check-circle" aria-hidden="true" style="color:#228B22"></i> Answer: This is demo answer.</h3>
+        <h3 class="font-weight-bold text-dark">
+          <i
+            class="fa fa-check-circle"
+            aria-hidden="true"
+            style="color: #228b22"
+          ></i>
+          {{video_process.interview_transcript}}
+        </h3>
+        <div class="question-graphs d-flex align-items-center text-center">
+          <div class="w-50 p-3">
+            <img
+              class="w-100"
+              src="{{ base_dir }}/uploads/reports/graphs/_text_analysis_chart_{{video_report.video_process_id}}.svg"
+            />
+            <h6 class="font-weight-bold text-dark">Text Sentiment Analysis</h6>
+          </div>
+          <div class="w-50 p-3">
+            <img
+              class="w-100"
+              src="{{ base_dir }}/uploads/reports/graphs/_frame_analysis_chart_{{video_report.video_process_id}}.svg"
+            />
+            <h6 class="font-weight-bold text-dark">Video Analysis</h6>
+          </div>
+          {% if video_report.audio_report %}
+          <div class="w-50 p-3">
+            <img
+              class="w-100"
+              src="{{ base_dir }}/uploads/reports/graphs/_audio_analysis_chart_{{video_report.video_process_id}}.svg"
+            />
+            <h6 class="font-weight-bold text-dark">Audio Analysis</h6>
+          </div>
+          {% endif %}
+        </div>
       </div>
       <div class="hr-theme-ib">
         <div class="hr-line"></div>
@@ -369,7 +267,9 @@
 
         <div class="hr-line"></div>
       </div>
-      {% endfor %}
+      <div style="page-break-before: always"></div>
+
+      {% endif %} {% endif %} {% endfor %}
     </div>
     {% endif %}
   </body>
