--- a/templates/layouts/admin/dashboard/base.html
+++ b/templates/layouts/admin/dashboard/base.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 
-<html lang="en" class="light-style layout-menu-fixed" dir="ltr" data-theme="theme-default" data-template="vertical-menu-template-free">
+<html
+  lang="en"
+  class="light-style layout-menu-fixed"
+  dir="ltr"
+  data-theme="theme-default"
+  data-template="vertical-menu-template-free"
+>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
 
     <title>{% block page_title %}{% endblock %} | E-Commerce</title>
 
     <meta name="description" content="" />
-    {% include 'layouts/admin/dashboard/styles.html' %}
-    {% block head_styles %}
+    {% include 'layouts/admin/dashboard/styles.html' %} {% block head_styles %}
     {% endblock %}
   </head>
 
@@ -26,7 +34,7 @@
         <!-- Layout container -->
         <div class="layout-page">
           <!-- Navbar -->
-            {% include 'layouts/admin/dashboard/header-navbar.html' %}
+          {% include 'layouts/header.html' %}
           <!-- / Navbar -->
 
           <!-- Content wrapper -->
@@ -34,30 +42,33 @@
             <!-- Content -->
 
             <div class="container-xxl flex-grow-1 container-p-y">
-                {% with messages = get_flashed_messages(with_categories=true) %}
-                  {% if messages %}
-                      {% for category, message in messages %}
-                                    {% if category == 'success' %}
-                                      <div class="alert alert-success alert-dismissible" role="alert">
-                                            {{ message }}
-                                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                                      </div>
-                                    {% endif %}
-
-                                    {% if category == 'error' %}
-                                      <div class="alert alert-danger alert-dismissible" role="alert">
-                                            {{ message }}
-                                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                                      </div>
-                                    {% endif %}
-                    {% endfor %}
-                  {% endif %}
-                {% endwith %}
-                <h4 class="fw-bold py-3 mb-4">
-                    {% block page_body_title %}{% endblock %}
-                </h4>
-                {% block body_block %}
-                {% endblock %}
+              {% with messages = get_flashed_messages(with_categories=true) %}
+              {% if messages %} {% for category, message in messages %} {% if
+              category == 'success' %}
+              <div class="alert alert-success alert-dismissible" role="alert">
+                {{ message }}
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="alert"
+                  aria-label="Close"
+                ></button>
+              </div>
+              {% endif %} {% if category == 'error' %}
+              <div class="alert alert-danger alert-dismissible" role="alert">
+                {{ message }}
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="alert"
+                  aria-label="Close"
+                ></button>
+              </div>
+              {% endif %} {% endfor %} {% endif %} {% endwith %}
+              <h4 class="fw-bold py-3 mb-4">
+                {% block page_body_title %}{% endblock %}
+              </h4>
+              {% block body_block %} {% endblock %}
             </div>
             <!-- / Content -->
 
@@ -77,8 +88,7 @@
     </div>
     <!-- / Layout wrapper -->
 
-    {% include 'layouts/admin/dashboard/scripts.html' %}
-    {% block body_scripts %}
-    {% endblock %}
+    {% include 'layouts/admin/dashboard/scripts.html' %} {% block body_scripts
+    %} {% endblock %}
   </body>
 </html>
