--- a/templates/layouts/admin/dashboard/footer.html
+++ b/templates/layouts/admin/dashboard/footer.html
@@ -1,12 +1,14 @@
-<footer class="content-footer footer bg-footer-theme">
-  <div class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column">
-    <div class="mb-2 mb-md-0">
-      ©
-      <script>
-        document.write(new Date().getFullYear());
-      </script>
-      &copy; Copyright
-      <a href="https://infobeans.com" target="_blank" class="footer-link fw-bolder">Infobeans Technologies Ltd.</a>
+<!DOCTYPE html>
+<header class="navigation">
+  <nav class="navbar navbar-expand" id="navbar">
+    <div class="container-fluid justify-content-center">
+      <!-- Investors<span> Chatbot</span> -->
+      <p class="p-0 m-0 text-center">
+        © Copyright
+        <a class="text-danger" href="http://infobeans.com/"
+          >Infobeans Technologies</a
+        >. All Rights Reserved
+      </p>
     </div>
-  </div>
-</footer>
+  </nav>
+</header>
