--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -1,26 +1,53 @@
-<!doctype html>
+<!DOCTYPE html>
 <!-- Header Start -->
 <header class="navigation">
-	<nav class="navbar navbar-expand-lg" id="navbar">
-		<div class="container-fluid">
-		  <a class="navbar-brand" href="{{ url_for('home_page') }}">
-            <!-- Investors<span> Chatbot</span> -->
-            <img src="{{ url_for('static', filename='pictures/Logo.png') }}" alt="">
-		  </a>
-          <a class="navbar-brand" href="">
-               {% if title_brand %} {{title_brand| safe}}{% else %} {{ navbar_brand|safe }} {% endif %}
-          </a>
+  <nav class="navbar navbar-expand-lg" id="navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="{{ url_for('home_page') }}">
+        <!-- Investors<span> Chatbot</span> -->
+        <img
+          src="{{ url_for('static', filename='pictures/Logo.png') }}"
+          alt=""
+        />
+      </a>
+      <a class="navbar-brand" href="">
+        {% if title_brand %} {{title_brand| safe}}{% else %} {{
+        navbar_brand|safe }} {% endif %}
+      </a>
 
-          {% if current_user.is_authenticated %}
-              <a class="navbar-brand" href="{{  url_for('auth.admin_logout') }}">
-                <span>Logout</span>
-              </a>
-          {% endif %}
+      {% if current_user.is_authenticated %}
+      <a
+        class="btn btn-danger logout-btn"
+        href="{{  url_for('auth.admin_logout') }}"
+      >
+        <span
+          >Logout
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="1em"
+            viewBox="0 0 512 512"
+          >
+            <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+            <path
+              d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
+            />
+          </svg>
+        </span>
+      </a>
+      {% endif %}
 
-		  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="fa fa-bars"></span>
-		  </button>
-		</div>
-	</nav>
+      <button
+        class="navbar-toggler collapsed"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarsExample09"
+        aria-controls="navbarsExample09"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="fa fa-bars"></span>
+      </button>
+    </div>
+  </nav>
 </header>
 <!-- Header Close -->
